// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job Details should not render the config if the config is not given 1`] = `
<div>
  <div
    class="job-details"
    style="padding-top: 4px;"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          123
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render grid if grid is enabled in config 1`] = `
<div>
  <div
    class="job-details"
    style="padding-top: 4px;"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/grid"
            >
              Grid
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          123
        </h4>
      </div>
    </div>
    <div
      class="grid-wrap"
    >
      <div
        style="position: relative;"
      >
        <canvas
          data-testid="grid-canvas"
          height="601"
          id="grid-canvas"
          style="position: absolute; z-index: 1;"
          width="601"
        />
        <canvas
          data-testid="grid-canvas-bg"
          height="601"
          id="grid-canvas-bg"
          style="position: absolute; z-index: 2;"
          width="601"
        />
        <canvas
          data-testid="grid-canvas-landmarks"
          height="601"
          id="grid-canvas-landmarks"
          style="position: absolute; z-index: 3;"
          width="601"
        />
        <div
          style="position: relative;"
        >
          <div
            style="position: absolute; z-index: 5; right: 0px;"
          >
            <h4>
              0/0 hrs
            </h4>
            <button
              class="btn btn-success"
            >
              START
            </button>
            <button
              class="btn btn-danger"
            >
              STOP
            </button>
          </div>
          <canvas
            data-testid="grid-canvas-agents"
            height="601"
            id="grid-canvas-agents"
            style="position: absolute; z-index: 4;"
            width="601"
          />
        </div>
      </div>
      <div
        class="legends-wrap"
      >
        <h6>
          Areas
        </h6>
        <ul
          class="legends areas"
        >
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(255, 240, 194);"
              />
              <span
                class="text"
              >
                Housing
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(249, 209, 228);"
              />
              <span
                class="text"
              >
                Work
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(250, 213, 181);"
              />
              <span
                class="text"
              >
                Transport
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(185, 218, 253);"
              />
              <span
                class="text"
              >
                Hospital
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(204, 204, 204);"
              />
              <span
                class="text"
              >
                Other
              </span>
            </div>
          </li>
        </ul>
        <h6>
          Agent States
        </h6>
        <ul
          class="legends agents"
        >
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(0, 123, 255);"
              />
              <span
                class="text"
              >
                Susceptible
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(231, 76, 60);"
              />
              <span
                class="text"
              >
                Infected
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: rgb(40, 167, 69);"
              />
              <span
                class="text"
              >
                Recovered
              </span>
            </div>
          </li>
          <li>
            <div
              class="legend-item"
            >
              <span
                class="swatch"
                style="background-color: black;"
              />
              <span
                class="text"
              >
                Deceased
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render the config if the config is given 1`] = `
<div>
  <div
    class="job-details"
    style="padding-top: 4px;"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          123
        </h4>
      </div>
    </div>
    <pre>
      {
    "configKey": "configValue"
}
    </pre>
  </div>
</div>
`;

exports[`Job Details should render the time series if the view is time-series 1`] = `
<div>
  <div
    class="job-details"
    style="padding-top: 4px;"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          123
        </h4>
      </div>
    </div>
    <div
      class="graph-wrap"
    >
      <div
        data-testid="visualization"
        id="vis"
      />
      <div
        class="graph-actions"
      >
        <p
          class="action"
        >
          Zoom: 
          <span
            class="control"
          >
            click-drag
          </span>
        </p>
        <p
          class="action"
        >
          Pan: 
          <span
            class="control"
          >
            shift-click-drag
          </span>
        </p>
        <p
          class="action"
        >
          Restore: 
          <span
            class="control"
          >
            double-click
          </span>
        </p>
        <button
          class="btn btn-secondary"
          disabled=""
        >
          Export graph
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render time-series if grid is disabled in config 1`] = `
<div>
  <div
    class="job-details"
    style="padding-top: 4px;"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          123
        </h4>
      </div>
    </div>
    <div
      class="graph-wrap"
    >
      <div
        data-testid="visualization"
        id="vis"
      />
      <div
        class="graph-actions"
      >
        <p
          class="action"
        >
          Zoom: 
          <span
            class="control"
          >
            click-drag
          </span>
        </p>
        <p
          class="action"
        >
          Pan: 
          <span
            class="control"
          >
            shift-click-drag
          </span>
        </p>
        <p
          class="action"
        >
          Restore: 
          <span
            class="control"
          >
            double-click
          </span>
        </p>
        <button
          class="btn btn-secondary"
          disabled=""
        >
          Export graph
        </button>
      </div>
    </div>
  </div>
</div>
`;
